--- a/.gitignore
+++ b/.gitignore
@@ -12,3 +12,6 @@ __pycache__/
 
 # Ignore large dataset on C3W2 Assignment
 /C3-Natural_Language_Processing_with_Sequence_Models/W2/Assignment/data/
+
+# Ignore the pretrained model
+/C3-Natural_Language_Processing_with_Sequence_Models/W3/Assignment/model/
