--- a/.gitignore
+++ b/.gitignore
@@ -15,3 +15,6 @@ __pycache__/
 
 # Ignore the pretrained model
 /C3-Natural_Language_Processing_with_Sequence_Models/W3/Assignment/model/
+
+# Ignore the large dataset
+/C4-Natural_Language_Processing_with_Attention_Models/W1/Lab/data/
