--- a/.gitignore
+++ b/.gitignore
@@ -21,3 +21,6 @@ __pycache__/
 
 # Ignore large dataset
 /C4-Natural_Language_Processing_with_Attention_Models/W1/Assignment/por-eng/
+
+# Ignore large dataset
+/C3-Natural_Language_Processing_with_Sequence_Models/W3/Assignment/questions.csv
