--- a/.gitignore
+++ b/.gitignore
@@ -27,3 +27,6 @@ __pycache__/
 
 # Ignore Large dataset
 /C4-Natural_Language_Processing_with_Attention_Models/W2/Assignment/data/
+
+# Ignore Large image size
+/C4-Natural_Language_Processing_with_Attention_Models/W2/Assignment/images/
